# kingate

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.en  README.zh  configure  configure.in
doc/: manual.en  manual.zh
etc/: access.conf  kingate.conf
src/: KConfig.cpp  KConfig.h  KDnsCache.cpp  KDnsCache.h  KFilter.cpp  KFilter.h  KHttpManage.cpp  KHttpManage.h  KMutex.h  KRWLock.cpp  KRWLock.h  KThreadPool.cpp  KThreadPool.h  KTimeMatch.cpp  KTimeMatch.h  KUser.cpp  KUser.h  Makefile.am  Makefile.in  allow_connect.cpp  allow_connect.h  cache.cpp  cache.h  common.cpp  config.h.in  cron.h  dnsproxy.cpp  do_config.cpp  do_config.h  environment.h  extern.h  forwin32.cpp  forwin32.h  ftp.cpp  ftp.h  garbage_c.cpp  hash.h  http.h  http_ftp.cpp  http_utils.cpp  (+22 more)
