bin_PROGRAMS=kingate dnsproxy
kingate_SOURCES = KConfig.cpp      KUser.h          ftp.cpp    mysocket.h\
KConfig.h        allow_connect.cpp  ftp.h           oops.cpp\
KDnsCache.cpp    allow_connect.h    garbage_c.cpp   oops.h\
KDnsCache.h      cache.cpp          hash.h          other.cpp\
KFilter.cpp      cache.h            http.h          other.h\
KFilter.h        common.cpp         http_ftp.cpp    run_client.cpp\
http_utils.cpp     server.h 	    mysstream\
kingate.h       socks.cpp\
KMutex.h         cron.h             lib.cpp         socks.h\
KRWLock.h        do_config.cpp      lib.h           user_model.h\
KThreadPool.cpp  do_config.h        log.cpp         utils.cpp\
KThreadPool.h    environment.h      log.h           utils.h\
KTimeMatch.cpp   extern.h           main.cpp        md5.h\
KTimeMatch.h     forwin32.cpp       malloc_debug.h  md5.cpp\
KUser.cpp        forwin32.h         mysocket.cpp    KHttpManage.h\
KHttpManage.cpp  KRWLock.cpp
dnsproxy_SOURCES=dnsproxy.cpp
dnsproxy_LDADD=mysocket.o KConfig.o KDnsCache.o
